--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 										class="caret"></span></a>
 								<ul class="dropdown-menu" role="menu">
 									<li><a href="#">Destaques</a></li>
-									<li><a href="../theme/pages/salgados/salgados-index.html">Salgados</a></li>
+									<li><a href="pages/salgados/salgados-index.html">Salgados</a></li>
 									<li><a href="#">Biscoitos</a></li>
 									<li><a href="#">Doces</a></li>
 									<li><a href="#">Temperos</a></li>
