alteraçao no header

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 							<span class="icon-bar"></span>
 							<span class="icon-bar"></span>
 						</button>
-						<a class="navbar-brand" href="#"><img class="img-responsive" src="img/logo.png"
+						<a class="navbar-brand" href="#"><img class="img-responsive" src="img/logo.jpg"
 								alt="Logo" /></a>
 					</div>
 
@@ -51,6 +51,7 @@
 										class="caret"></span></a>
 								<ul class="dropdown-menu" role="menu">
 									<li><a href="#">Destaques</a></li>
+									<li class="divider"></li>
 									<li><a href="pages/salgados/salgados-index.html">Salgados</a></li>
 									<li><a href="#">Biscoitos</a></li>
 									<li><a href="#">Doces</a></li>
