--- a/pages/salgados/gulositos/gulositos.html
+++ b/pages/salgados/gulositos/gulositos.html
@@ -66,7 +66,7 @@
 							<span class="icon-bar"></span>
 							<span class="icon-bar"></span>
 						</button>
-						<a class="navbar-brand" href="#"><img class="img-responsive" src="../../../img/logo.png"
+						<a class="navbar-brand" href="#"><img class="img-responsive" src="../../../img/logo.jpg"
 								alt="Logo" /></a>
 					</div>
 
@@ -78,6 +78,7 @@
 										class="caret"></span></a>
 								<ul class="dropdown-menu" role="menu">
 									<li><a href="../../../index.html">Destaques</a></li>
+									<li class="divider"></li>
 									<li><a href="../salgados-index.html">Salgados</a></li>
 									<li><a href="#">Biscoitos</a></li>
 									<li><a href="#">Doces</a></li>
