--- a/pages/salgados/salgados-index.html
+++ b/pages/salgados/salgados-index.html
@@ -39,7 +39,7 @@
 							<span class="icon-bar"></span>
 							<span class="icon-bar"></span>
 						</button>
-						<a class="navbar-brand" href="#"><img class="img-responsive" src="../.i./img/logo.png"
+						<a class="navbar-brand" href="#"><img class="img-responsive" src="../../img/logo.jpg"
 								alt="Logo" /></a>
 					</div>
 
